test/corpus/statements.txt
================================================================================
Text
================================================================================

\p{Adsf! Adfds, sadfklje, asdflkj? aldkfja. }

--------------------------------------------------------------------------------

(source_file
  (p
    (text)))

================================================================================
Subtree
================================================================================

\subtree[foo-0001]{
  \title{Hello}
  \p{World}
}

\subtree{
  \title{Hello}
  \p{World}
}


--------------------------------------------------------------------------------

(source_file
  (subtree
    (addr
      (prefix)
      (id))
    (text)
    (title
      (text))
    (text)
    (p
      (text)))
  (subtree
    (text)
    (title
      (text))
    (text)
    (p
      (text))))

================================================================================
Method call
================================================================================

\asdf#foo

--------------------------------------------------------------------------------

(source_file
  (ident_with_method_calls
    (text)
    (text)))

================================================================================
Contributor
================================================================================

\contributor{me}

--------------------------------------------------------------------------------

(source_file
  (contributor
    (text)))

================================================================================
Meta
================================================================================

\meta{external}{https://github.com/kentookura}

--------------------------------------------------------------------------------

(source_file
  (meta
    (text)
    (text)))

================================================================================
Tags
================================================================================

\tag{foo}
\tag{baz-bar}

--------------------------------------------------------------------------------

(source_file
  (tag
    (text))
  (tag
    (text)))

================================================================================
Author
================================================================================

\author{Kento Okura}

--------------------------------------------------------------------------------

(source_file
  (author
    (text)))

================================================================================
Import
================================================================================

\import{asd-053X}

--------------------------------------------------------------------------------

(source_file
  (import
    (addr
      prefix: (prefix)
      id: (id))))

================================================================================
Export
================================================================================

\export{asd-053X}

--------------------------------------------------------------------------------

(source_file
  (export
    (addr
      (prefix)
      (id))))

================================================================================
Date
================================================================================

\date{2023-02-08T12:03:12Z}
\date{2023-02-08}

--------------------------------------------------------------------------------

(source_file
  (date
    (text))
  (date
    (text)))

================================================================================
Title
================================================================================

\title{My Title}

--------------------------------------------------------------------------------

(source_file
  (title
    (text)))

================================================================================
Transclusion
================================================================================

\transclude{nvm-0002}

--------------------------------------------------------------------------------

(source_file
  (transclude
    address: (addr
      prefix: (prefix)
      id: (id))))

================================================================================
Ident
================================================================================

\p{\foo{asdf}}

--------------------------------------------------------------------------------

(source_file
  (p
    (ident
      (text))
    (text)))

================================================================================
Inline Math
================================================================================

\p{
    #{E}

}
--------------------------------------------------------------------------------

(source_file
  (p
    (text)
    (inline_math
      (text))))

================================================================================
Display Math
================================================================================

\p{
    ##{E}

}
--------------------------------------------------------------------------------

(source_file
  (p
    (text)
    (display_math
      (text))))

================================================================================
Math Text
================================================================================

\p{
    ##{E}
}
\p{
  ##{E} asdf #{asdf}
}

\p{
  ##{E}, texttexttext #{textext}, textext.
}
--------------------------------------------------------------------------------

(source_file
  (p
    (text)
    (display_math
      (text)))
  (p
    (text)
    (display_math
      (text))
    (text)
    (inline_math
      (text)))
  (p
    (text)
    (display_math
      (text))
    (text)
    (inline_math
      (text))
    (text)))

================================================================================
Math Commands
================================================================================

\p{
  ##{\f\relax{x} = \int_{-\infty}^\infty
  \f\hat\xi\,e^{2 \pi i \xi x}
  \,d\xi}

}
--------------------------------------------------------------------------------

(source_file
  (p
    (text)
    (display_math
      (ident
        (text))
      (ident
        (text))
      (text)
      (text)
      (ident
        (text))
      (text)
      (ident
        (text))
      (text)
      (ident
        (text))
      (text)
      (ident
        (text))
      (ident
        (text))
      (ident
        (text))
      (ident
        (text))
      (text)
      (ident
        (text))
      (ident
        (text))
      (text)
      (ident
        (text))
      (ident
        (text)))))

================================================================================
Comment
================================================================================

% lorem ipsum

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Function Definition
================================================================================

\def\foo[x][y][z]{
\p{\x \y \z}
\transclude{foo-0001}
}

--------------------------------------------------------------------------------

(source_file
  (def
    (fun_spec
      (ident
        (text))
      (text)
      (text)
      (text)
      (p
        (ident
          (text))
        (ident
          (text))
        (ident
          (text)))
      (transclude
        (addr
          (prefix)
          (id))))))

================================================================================
Prim
================================================================================

\p{
  [asdf](foo-0001)
  \ul{
      \li{[[asdf/asdf.pdf]]}
      }
    [asdf](foo-0001)

  }

--------------------------------------------------------------------------------

(source_file
  (p
    (text)
    (markdown_link
      (text)
      (text))
    (text)
    (ul
      (text)
      (li
        (unlabeled_link
          (external_link
            (text))))
      (text))
    (text)
    (markdown_link
      (text)
      (text))
    (text)))

================================================================================
Scope
================================================================================


\scope{
  \put\transclude/title{featured talks}
}

--------------------------------------------------------------------------------

(source_file
  (scope
    (text)
    (put
      (ident
        (text))
      (text))))

================================================================================
Query
================================================================================

\def\query/bibliography[x]{
 \open\query
 \isect{
  \union-fam-rel{\transclusion-coslice{\x}}{\edges}{\outgoing}{\rel/links}
 }{
  \taxon{reference}
 }
}

--------------------------------------------------------------------------------

(source_file
  (def
    (fun_spec
      (ident
        (text))
      (text)
      (text)
      (open
        (ident
          (text)))
      (text)
      (ident
        (text))
      (text)
      (ident
        (text))
      (ident
        (text))
      (ident
        (text))
      (ident
        (text))
      (ident
        (text))
      (ident
        (text))
      (text)
      (text)
      (taxon
        (text))
      (text))))

================================================================================
Objects
================================================================================

\def\my-object{
  \object[self]{
    [method1]{
      the implementation of this method
    }
    [method2]{
      the implementation of another method
      \self#method1
    }
  }
}

--------------------------------------------------------------------------------

(source_file
  (def
    (fun_spec
      (ident
        (text))
      (text)
      (object
        (text)
        (method_decl
          (text)
          (method_body
            (text)
            (text)))
        (method_decl
          (text)
          (method_body
            (text)
            (text)
            (ident_with_method_calls
              (text)
              (text))
            (text)))))))

================================================================================
Patch
================================================================================

\patch{\my-object}[self]{
  [method1]{
    \self/super#method1
    some further code
  }
}

--------------------------------------------------------------------------------

(source_file
  (patch
    (ident
      (text))
    (text)
    (method_decl
      (text)
      (method_body
        (text)
        (ident_with_method_calls
          (text)
          (text))
        (text)
        (text)))))

================================================================================
XML
================================================================================

\xmlns:mml{http://www.w3.org/1998/Math/MathML}
\def\math[body]{\<mml:math>{\body}}
\def\mrow[body]{\<mml:mrow>{\body}}
\def\mi[x]{\<mml:mi>{\x}}
\def\mo[o]{\<mml:mo>{\o}}
\def\mn[n]{\<mml:mn>{\n}}

--------------------------------------------------------------------------------

(source_file
  (decl_xmlns
    (xml_base_ident)
    (text))
  (def
    (fun_spec
      (ident
        (text))
      (text)
      (xml_tag
        (xml_name
          (xml_qname
            (xml_base_ident)
            (xml_base_ident)))
        (xml_body
          (ident
            (text))))))
  (def
    (fun_spec
      (ident
        (text))
      (text)
      (xml_tag
        (xml_name
          (xml_qname
            (xml_base_ident)
            (xml_base_ident)))
        (xml_body
          (ident
            (text))))))
  (def
    (fun_spec
      (ident
        (text))
      (text)
      (xml_tag
        (xml_name
          (xml_qname
            (xml_base_ident)
            (xml_base_ident)))
        (xml_body
          (ident
            (text))))))
  (def
    (fun_spec
      (ident
        (text))
      (text)
      (xml_tag
        (xml_name
          (xml_qname
            (xml_base_ident)
            (xml_base_ident)))
        (xml_body
          (ident
            (text))))))
  (def
    (fun_spec
      (ident
        (text))
      (text)
      (xml_tag
        (xml_name
          (xml_qname
            (xml_base_ident)
            (xml_base_ident)))
        (xml_body
          (ident
            (text)))))))

================================================================================
Full
================================================================================

\title{My Title}
\p{hello}
\transclude{nvm-0002}
\p{
    \ul{
        \li{asdf}
        \li{foobar}
      }
  [asdf](foo-0001) [[foo-0001]]
  \code{asdlfkjasfd}
}

\block{
  [asdf](foo-0001) [[foo-0001]]
  \code{asdlfkjasfd}
  }{foo}

\def\my-object{
  \object[self]{
    [method1]{
      the implementation of this method
    }
    [method2]{
      the implementation of another method
      \self#method1
    }
  }
}

\patch{\my-object}[self]{
  [method1]{
    \self/super#method1
    some further code
  }
}

\table{
  \row{[forester query ](gld-0008)}{[[https://git.sr.ht/~kentookura/ocaml-forester/tree/nvim-support]]}
  \row{[forester-lsp](gld-0003)}{[[https://git.sr.ht/~kentookura/ocaml-forester/tree/lsp]]}
  \row{[more/better output ](gld-0007)}{N.A.}
  \row{[richer interactivity ](gld-0006)}{N.A.}
  \row{[pandoc filter](gld-000C)}{N.A.}
}




\scope{
  \put\transclude/titly{featured talks}
  \query{
    \query/author{jonmsterling}
  }
}

--------------------------------------------------------------------------------

(source_file
  (title
    (text))
  (p
    (text))
  (transclude
    (addr
      (prefix)
      (id)))
  (p
    (text)
    (ul
      (text)
      (li
        (text))
      (text)
      (li
        (text))
      (text))
    (text)
    (markdown_link
      (text)
      (text))
    (text)
    (unlabeled_link
      (external_link
        (text)))
    (text)
    (code
      (text)))
  (ident
    (text))
  (text)
  (markdown_link
    (text)
    (text))
  (text)
  (unlabeled_link
    (external_link
      (text)))
  (text)
  (code
    (text))
  (text)
  (text)
  (def
    (fun_spec
      (ident
        (text))
      (text)
      (object
        (text)
        (method_decl
          (text)
          (method_body
            (text)
            (text)))
        (method_decl
          (text)
          (method_body
            (text)
            (text)
            (ident_with_method_calls
              (text)
              (text))
            (text))))))
  (patch
    (ident
      (text))
    (text)
    (method_decl
      (text)
      (method_body
        (text)
        (ident_with_method_calls
          (text)
          (text))
        (text)
        (text))))
  (ident
    (text))
  (text)
  (ident
    (text))
  (markdown_link
    (text)
    (text))
  (unlabeled_link
    (external_link
      (text)))
  (text)
  (ident
    (text))
  (markdown_link
    (text)
    (text))
  (unlabeled_link
    (external_link
      (text)))
  (text)
  (ident
    (text))
  (markdown_link
    (text)
    (text))
  (text)
  (text)
  (ident
    (text))
  (markdown_link
    (text)
    (text))
  (text)
  (text)
  (ident
    (text))
  (markdown_link
    (text)
    (text))
  (text)
  (scope
    (text)
    (put
      (ident
        (text))
      (text))
    (text)
    (query_tree
      (text)
      (ident
        (text))
      (text)
      (text))))
